Added client Ip to tags

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -81,6 +81,9 @@ kamon {
             # Use the http.status_code tag.
             status-code = metric
 
+            # Use the http.clientIp tag.
+            client-ip = metric
+
             # Copy tags from the context into the Spans with the specified purpouse. For example, to copy a customer_type
             # tag from the context into the HTTP Server Span created by the instrumentation, the following configuration
             # should be added:
@@ -192,6 +195,9 @@ kamon {
 
             # Use the http.status_code tag.
             status-code = metric
+
+            # Use the http.clientIp tag.
+            client-ip = metric
 
             # Copy tags from the context into the Spans with the specified purpouse. For example, to copy a customer_type
             # tag from the context into the HTTP Server Span created by the instrumentation, the following configuration
